Feat(auth)
Add patch me and change password
